seeing if this fixes issues on mobile

--- a/components/Landing/Landing.module.scss
+++ b/components/Landing/Landing.module.scss
@@ -155,12 +155,10 @@
 }
 
 .sectionLink {
-    border: 2px solid red;
     height: 30vw;
     font-size: 11vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-left: 10px;
+    border: none;
     background-color: transparent;
     color: $p-black;
 
